mkrun.sh script changed (I couldn't initialize a VM with -Xss256M)